--- a/client/app/package.json
+++ b/client/app/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/hipropascal/infomet_nelayan#readme",
   "dependencies": {
     "angular": "^1.7.5",
-    "leaflet": "^1.3.4"
+    "leaflet": "^1.3.4",
+    "leaflet.pm": "^1.0.1"
   },
   "devDependencies": {
     "html-loader": "^0.5.5",
