--- a/client/app/package.json
+++ b/client/app/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/hipropascal/infomet_nelayan#readme",
   "dependencies": {
     "angular": "^1.7.5",
+    "angular-route": "^1.7.5",
     "leaflet": "^1.3.4",
     "leaflet.pm": "^1.0.1",
     "w3-css": "^4.1.0"
